# qbdi-tracer-android

./: .clang-format  CMakeLists.txt  readme.md
core/: back_trace_manager.cpp  back_trace_manager.h  common.h  hex_dump.cpp  hex_dump.h  hook_manager.cpp  hook_manager.h  instruction_call_back.cpp  instruction_call_back.h  instruction_dispatch_manager.h  instruction_info_manager.cpp  instruction_info_manager.h  instruction_register_utils.cpp  instruction_register_utils.h  instruction_tracer_manager.cpp  instruction_tracer_manager.h  java_helper.cpp  java_helper.h  library.cpp  library.h  linker.cpp  linker.h  logger_manager.cpp  logger_manager.h  memory.cpp  memory.h  memory_manager.cpp  memory_manager.h  memory_scan.cpp  memory_scan.h  range.h
core/dispatch/: dispatch_base.cpp  dispatch_base.h  dispatch_jni_env.cpp  dispatch_jni_env.h  dispatch_libc.cpp  dispatch_libc.h  dispatch_libz.cpp  dispatch_libz.h  dispatch_syscall.cpp  dispatch_syscall.h  jni_internal.cpp
examples/: CMakeLists.txt  linker_test.cpp  test.cpp  trace_test.cpp
test/: linux_syscall_support.h  trace_test.cpp
trace/: common.h  hex_dump.cpp  instruction_call_back.cpp  instruction_call_back.h  instruction_dispatch_manager.cpp  instruction_info_manager.cpp  instruction_info_manager.h  instruction_register_utils.cpp  instruction_register_utils.h  instruction_tracer_manager.cpp  instruction_tracer_manager.h  logger_manager.cpp  logger_manager.h  memory_manager.cpp  memory_manager.h
trace/dispatch/: dispatch_base.cpp  dispatch_base.h  dispatch_jni_env.cpp  dispatch_jni_env.h  dispatch_libc.cpp  dispatch_libc.h  dispatch_libz.cpp  jni_internal.cpp  jni_internal.h
